kustomize/logging/base/namespace-qubole-logging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qubole-logging
  labels:
    name: qubole-logging
