kustomize/logging/base/efk-fluentd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fluentd
  name: efk-fluentd
spec:
  selector:
    matchLabels:
      app: fluentd
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configmap: ce993ba8eb7c3dd466abc17937dd236134c4834769ad60e70abf1947ccdf1984
      labels:
        app: fluentd
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - /etc/fluent/config.d/install-plugins.sh
        image: gcr.io/google-containers/fluentd-elasticsearch:v2.4.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /fluentd.pod.healthcheck?json=%7B%22log%22%3A+%22health+check%22%7D
            port: 9880
          initialDelaySeconds: 5
          timeoutSeconds: 1
        name: fluentd
        ports:
        - containerPort: 24224
          name: fluent-input
          protocol: TCP
        - containerPort: 9880
          name: http-input
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/fluent/config.d
          name: config-volume-efk-fluentd
        - mountPath: /var/log/fluentd-buffers
          name: buffer
      serviceAccountName: efk-fluentd
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 511
          name: efk-fluentd
        name: config-volume-efk-fluentd
      - name: buffer
        persistentVolumeClaim:
          claimName: efk-fluentd
