kustomize/logging/base/efk-fluentd-forwarder-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: efk
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: logging
    helm.sh/chart: logging-0.1.1
  name: efk-fluentd-forwarder
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: efk
      app.kubernetes.io/name: logging
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: efk
        app.kubernetes.io/name: logging
    spec:
      containers:
      - env:
        - name: FLUENT_FOWARD_HOST
          value: efk-fluentd.qubole-logging.svc.cluster.local
        - name: FLUENT_FOWARD_PORT
          value: "24224"
        image: fluent/fluentd-kubernetes-daemonset:v1.8.1-debian-forward-1.0
        imagePullPolicy: IfNotPresent
        name: fluentd-forwarder
        resources:
          limits:
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 200Mi
        volumeMounts:
        - mountPath: /var/log
          name: varlog
        - mountPath: /var/lib/docker/containers
          name: varlibdockercontainers
          readOnly: true
      serviceAccountName: efk-logging-forwarder
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - hostPath:
          path: /var/log
        name: varlog
      - hostPath:
          path: /var/lib/docker/containers
        name: varlibdockercontainers
