kustomize/logging/base/efk-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: efk-umxmq-test
spec:
  containers:
    - command:
        - sh
        - -c
        - |
          #!/usr/bin/env bash -e
          curl -XGET --fail 'elasticsearch-master:9200/_cluster/health?wait_for_status=green&timeout=1s'
      image: docker.elastic.co/elasticsearch/elasticsearch:7.4.1
      name: efk-macem-test
  restartPolicy: Never
