kustomize/logging/base/efk-fluentd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fluentd
  name: efk-fluentd
spec:
  ports:
  - name: fluent-input
    port: 24224
    protocol: TCP
    targetPort: 24224
  selector:
    app: fluentd
  type: ClusterIP
