kustomize/logging/base/efk-kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: efk-kibana
spec:
  ports:
  - name: http
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  type: ClusterIP
