kustomize/logging/base/efk-kibana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: efk-kibana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /kibana(/|$)(.*)
            backend:
              serviceName: efk-kibana
              servicePort: 5601
